# robit

./: .gitignore  Cargo.toml  README.md
configs/: policy.toml
crates/robit/: Cargo.toml
crates/robit/src/: ai.rs  config.rs  engine.rs  lib.rs  main.rs  policy.rs  preflight.rs  protocol.rs  types.rs  utils.rs
crates/robit/src/actions/: browser.rs  fs_ops.rs  fs_organize.rs  mod.rs  rust_project.rs  shell.rs  web.rs
crates/robit/src/adapter/: mod.rs  robrix.rs  stdin.rs
crates/robit/src/planner/: mod.rs  rule.rs
docs/: preflight.md
