[package]
name        = "robit"
description = "Robit is your own personal AI assistant."
version     = { workspace = true }
edition     = { workspace = true }

[dependencies]
anyhow = { workspace = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
